Resolved spacing issue

--- a/wp-content/themes/fr-starter-theme/resources/styles/modules/_hero.scss
+++ b/wp-content/themes/fr-starter-theme/resources/styles/modules/_hero.scss
@@ -121,7 +121,6 @@ body:not(.home) {
             }
         }
         .content-container {
-            margin-top: 81px;
             height: 396px;
             padding: 114px 0;
             @include not-front-hero-svg;
